--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django-rest-framework = "^0.1.0"
 python-dotenv = "^0.21.0"
 pymysql = "^1.0.2"
 drf-yasg = "^1.21.4"
+social-auth-app-django = "^5.0.0"
 
 
 [build-system]
